--- a/index.css
+++ b/index.css
@@ -67,7 +67,7 @@ ul {
 
 .ct-image {
     height: 200px;
-    background: url(../stats-preview-card-component-main/images/image-header-mobile.jpg), hsl(277, 64%, 61%);
+    background: url("images/image-header-mobile.jpg"), hsl(277, 64%, 61%);
     background-blend-mode: multiply;
     background-repeat: no-repeat;
     background-size: cover;
@@ -104,7 +104,7 @@ ul {
     .ct-image {
         width: 50%;
         height: auto;
-        background: url(../stats-preview-card-component-main/images/image-header-desktop.jpg), hsl(277, 64%, 61%);
+        background: url("images/image-header-desktop.jpg"), hsl(277, 64%, 61%);
         background-blend-mode: multiply;
         background-repeat: no-repeat;
         background-size: cover;
